repair grunt watch command and set .row to overflow: auto

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ body {
     Grid
    ========================== */
 .row {
+  overflow: auto;
   clear: both;
   width: 100%;
   margin-bottom: 1em; }
