--- a/css/partials/layout.css
+++ b/css/partials/layout.css
@@ -33,6 +33,7 @@
     Grid
    ========================== */
 .row {
+  overflow: auto;
   clear: both;
   width: 100%;
   margin-bottom: 1em;
