--- a/css/scss/globals/_mixins.scss
+++ b/css/scss/globals/_mixins.scss
@@ -14,6 +14,7 @@ $marginless-col-width: $width / $site-column-count;
 
 // create row
 @mixin row() {
+  overflow: auto;
   clear: both;
   width: $width;
   margin-bottom: $margin;
